<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="sign_in_label">Sign In</string>
    <string name="sing_up_label">Sign Up</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">yourEmail@test.com</string>
    <string name="welcome_title_label">Welcome to the Shoe Store!</string>
    <string name="welcome_paragraph_text">You will find the better shoes in our store at a really cheap prices! Check it out!</string>
    <string name="go_to_instructions_button">Instructions</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions_steps">
        1) Access to the Shoe List \n\n\n
        2)Find in the list the Shoes you like the most\n\n\n
        3)Click on it\n\n\n
        4)You will its details"</string>
    <string name="go_to_list_text">Go to list</string>
    <string name="logout_menu_item">Logout</string>
    <string name="login_screen_title">Login</string>
    <string name="welcome_screen_label">Welcome</string>
    <string name="instructions_screen_label">Instructions</string>
    <string name="shoe_list_screen_label">Available Shoes</string>
    <string name="shoe_image_alt">ShoeImage</string>
    <string name="shoe_size_label">Size:</string>
    <string name="shoe_name_label">Name:</string>
    <string name="shoe_description_label">Description:</string>
    <string name="shoe_company_label">Company:</string>
    <string name="shoe_detail_screen_label">Shoe Detail</string>
    <string name="shoe_name_hint">A shoe name</string>
    <string name="shoe_company_hint">A company name</string>
    <string name="shoe_description_hint">A description</string>
    <string name="shoe_size_hint">37.5</string>
    <string name="button_save">Save</string>
    <string name="add_new_shoe_text_button_description">add new shoe</string>
</resources>
