<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.udacity.shoestore.screens.LoginFragment">

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacer_medium"
        android:text="@string/email_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/email_text"
        app:layout_constraintEnd_toStartOf="@+id/email_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacer_medium"
        android:text="@string/password_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/password_text"
        app:layout_constraintEnd_toStartOf="@+id/password_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email_text"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="@dimen/spacer_medium"
        android:layout_marginEnd="@dimen/spacer_medium"
        android:ems="10"
        android:hint="@string/email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/email_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="@dimen/spacer_medium"
        android:ems="10"
        android:hint="@string/password_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/password_label"
        app:layout_constraintTop_toBottomOf="@+id/email_text"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacer_medium"
        android:layout_marginEnd="@dimen/spacer_medium"
        android:layout_marginBottom="24dp"
        android:text="@string/sing_up_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacer_medium"
        android:layout_marginTop="@dimen/spacer_medium"
        android:layout_marginEnd="@dimen/spacer_medium"
        android:text="@string/sign_in_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_text"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>