<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.screens.login.LoginFragment"
        android:label="@string/login_screen_title"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/action_login_destination_to_welcome_destination"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.screens.welcome.WelcomeFragment"
        android:label="@string/welcome_screen_label"
        tools:layout="@layout/welcome_fragment">
        <action
            android:id="@+id/action_welcome_destination_to_instructions_destination"
            app:destination="@id/instructionsFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.screens.instructions.InstructionsFragment"
        android:label="@string/instructions_screen_label"
        tools:layout="@layout/instructions_fragment">
        <action
            android:id="@+id/action_instructions_destination_to_shoe_list_destination"
            app:destination="@id/shoeListFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.screens.shoelist.ShoeListFragment"
        android:label="@string/shoe_list_screen_label"
        tools:layout="@layout/shoe_list_fragment" >
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.screens.shoedetail.ShoeDetailFragment"
        android:label="@string/shoe_detail_screen_label"
        tools:layout="@layout/shoe_detail_fragment">
        <action
            android:id="@+id/action_shoeDetailFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit"
            app:popUpTo="@id/shoeListFragment" />
    </fragment>
</navigation>