<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.welcome.WelcomeFragment">

        <TextView
            android:id="@+id/welcome_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title_label"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39" />

        <TextView
            android:id="@+id/welcome_paragraph_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacer_xl"
            android:layout_marginTop="@dimen/spacer_small"
            android:layout_marginEnd="@dimen/spacer_xl"
            android:text="@string/welcome_paragraph_text"
            android:textAlignment="center"
            android:textSize="@dimen/subtitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_title_label"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/go_to_instructions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_instructions_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_paragraph_label"
            app:layout_constraintVertical_bias="0.100000024" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>